Fix dinky text overlapping (#11)
Fixes #10

--- a/docs/_sass/jekyll-theme-dinky.scss
+++ b/docs/_sass/jekyll-theme-dinky.scss
@@ -332,7 +332,6 @@ section {
 footer {
   width:170px;
   float:left;
-  position:fixed;
   bottom:10px;
 	padding-left: 50px;
 }
